--- a/1. IMC/style.css
+++ b/1. IMC/style.css
@@ -9,6 +9,57 @@
 body {
   min-height: 100vh;
   font-family: Lato, Helvetica, sans-serif;
-  background: linear-gradient(to right, #36d1dc, #5b86e5);
+  background: linear-gradient(to right, #ffb4a2, #b5838d);
   padding: clamp(20px, 5vw, 50px) 10px 10px;
 }
+
+.container {
+  max-width: 850px;
+  background: #ffddd2;
+  border: 1px solid #ffddd2;
+  padding: 25px;
+  margin: 0 auto;
+  border-radius: 5px;
+  box-shadow: 0 4px 5px rgba(0,0,0,0.3);
+}
+
+h1 {
+  font-family: Raleway, sans-serif;
+  font-size: 40px;
+  text-align: center;
+  margin-bottom: 40px;
+  font-weight: 400;
+}
+
+h1 span {
+  font-weight: 700;
+}
+
+.inputs-container {
+  display: flex;
+  justify-content: center;
+}
+
+.inputs-container label {
+  display: block;
+  margin-bottom: 10px;
+  margin-left: 5px;
+}
+
+.inputs-container input {
+  min-width: 350;
+  font-size: 18px;
+  padding: 15px;
+  border: none;
+  border-bottom: 1px solid #beb3cffb;
+  box-shadow: 0 5px 5px rgba(0,0,0,0.3);
+  border-radius: 5px;
+}
+
+.inputs-container input:focus {
+  outline: 1px solid #bb8590;
+}
+
+.input-group:nth-child(2) {
+  margin-left: 20px;
+} 
